# pac-man-mingl

./: .gitignore  CMakeLists.txt  Pac-Man-MinGL.pro  config.yaml  readme.md
assets/: invisibleHitBox.si2  lostMenu.si2  mainMenu.si2  pacman.si2  pacmanSkin.si2  phantom.si2  phantomCyan.si2  phantomGreen.si2  phantomRose.si2  phantomYellow.si2  point.si2  selector20x20.si2  wall.si2  wonMenu.si2
doc/html/: _collision_8cpp.html  _collision_8cpp__incl.dot  _collision_8cpp_source.html  _collision_8h.html  _collision_8h__dep__incl.dot  _collision_8h__incl.dot  _collision_8h_source.html  _config_manager_8cpp.html  _config_manager_8cpp__incl.dot  _config_manager_8cpp_source.html  _config_manager_8h.html  _config_manager_8h__dep__incl.dot  _config_manager_8h__incl.dot  _config_manager_8h_source.html  _game_8cpp.html  _game_8cpp__incl.dot  _game_8cpp_source.html  _game_8h.html  _game_8h__dep__incl.dot  _game_8h__incl.dot  _game_8h_source.html  _game_object_8cpp.html  _game_object_8cpp__incl.dot  _game_object_8cpp_source.html  _game_object_8h.html  _game_object_8h__dep__incl.dot  _game_object_8h__incl.dot  _game_object_8h_source.html  _keyboard_controller_8cpp.html  _keyboard_controller_8cpp__incl.dot  _keyboard_controller_8cpp_source.html  _keyboard_controller_8h.html  _keyboard_controller_8h__dep__incl.dot  _keyboard_controller_8h__incl.dot  _map_8h.html  (+79 more)
src/: Collision.cpp  Collision.h  ConfigManager.cpp  ConfigManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  KeyboardController.cpp  KeyboardController.h  Map.cpp  Map.h  SpriteManager.cpp  SpriteManager.h  main.cpp
(+36 files in other folders)
